Development -> Master | Portfolio | Added missing skill and fixed the image size on portfolio details page (#5)
* Digital Resume | Corrected the github.io url

* Digital Resume | GPG key test

* Digital Resume | Fix for Portfolio image responsiveness for small screens

* Digital Resume | Removed the Location details

* Digital Resume | Fixed the overlapping issue of skills

* Digital Resume | Added missing skills

* Digital Resume | Sorted the skills

* Portfolio | Added missing skill and fixed the image size on portfolio details page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1165,6 +1165,7 @@ section {
 @media (max-width: 850px) {
   .portfolio-image {
     width: 100% !important;
+    height: auto !important;
   }
 }
 
